[NETBEANS-5799]: Added support for code auto completion and test cases